add initial draft MRI intro

--- a/lecture/introduction/notebooks/neuroscience/mri_intro.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/mri_intro.ipynb
@@ -38,7 +38,7 @@
     "`MRI` is very sensitive to `head movements`! Cushions or other devices can be used to reduce `movement`.\n",
     "```\n",
     "\n",
-    "```{admonition} **Coil + current = magnetic field**!\n",
+    "```{note} **Coil + current = magnetic field**!\n",
     "By creating a ring with `electric wire` and passing an `electric current`, we produce a `magnetic field`. In the video below we can see the `magnetic field` lines being drawn when the `magnetic field` is `activated`. `Field lines` are straight as they pass through the `center` of the ring, but they `propagate` in `circles` away from the `center` of the ring. To obtain a constant `magnetic field` inside the ring, we can thicken the ring so as to form a `cylinder`. It's the same principle that we find in an `MRI machine`!\n",
     "```"
    ]
@@ -92,7 +92,7 @@
     "\n",
     "The `protons` that make up part of the `atoms` behave like little `magnets` that `spin` around their own `axis`, similar to a `spinning top` (see {numref}`spin-fig`). This `rotation` of the `magnetic moment` is called the `precession movement` and depends among other things on the `composition` of the `core`. Thus, each type of `nucleus` has a characteristic *Larmor frequency*.\n",
     "\n",
-    "```{admonition} Larmor frequency of a hydrogen atom\n",
+    "```{note} Larmor frequency of a hydrogen atom\n",
     ":class: dropdown\n",
     "A `hydrogen atom` has a `Larmor frequency` of `42.58 MHz/Tesla`. This `frequency` is therefore not fixed, but **depends on the strength of the magnetic field!** Placed in an `external magnetic field` of `1T`, a `hydrogen atom` rotates `42580000` times per second. The stronger the `magnetic field` in which a `proton` is located, the more the speed at which the `magnetic moment` of this `proton` rotates will increase.\n",
     "```\n",
@@ -100,7 +100,7 @@
     "The `MRI magnet` helps align the `magnetic moment` of the `protons` along the same `axis` as the `main magnetic field`, called `B0`. This `B0` `field` goes from the `feet` to the `head`. The `strength` of the `main magnet` is measured in `Teslas (T)`. `1.5T` devices are mainly used for clinical purposes, while in research, the standard is rather `3T`, which is about `60,000` times more powerful than the Earth's `magnetic field`! The `7T` devices represent today the new frontier used in research, and some `10T`+ devices exist in the world. But why would we want to increase the `strength` of the `magnetic field`? By `increasing` the `strength` of the `magnetic field`, we can gain `spatial` and `temporal resolution`. On the other hand, `increasing` the `strength` of the `magnetic field` can also introduce `artifacts`!\n",
     "\n",
     "## Magnetic resonance\n",
-    "```{admonition} Resonance... not just magnetic\n",
+    "```{note} Resonance... not just magnetic\n",
     "We find `resonance` phenomena in many situations. A known example is the `resonance` between the `wind` and the `Tacoma Bridge`, which led to the collapse of the bridge (see the video below).\n",
     "```"
    ]
@@ -149,14 +149,13 @@
     "\n",
     "By stopping the `pulses`, the `hydrogen atoms` enter into `relaxation`, that is to say that their `magnetic moment` will return to the `initial direction B0`. In other words, the `magnetic moment` in `direction B1` decreases to return in `direction B0`. This `relaxation phenomenon` is very important, because the speed of `relaxation` will depend on the `characteristics` of the `tissues` that have been excited. The `relaxation` speed is measured by the receiving `antennas` placed in the `helmet` around the `participant`'s head!\n",
     "\n",
-    "```{admonition} Phasing\n",
-    ":class:tip\n",
-    ":name: phase-tip\n",
+    "```{note} Phasing\n",
+    ":class: tip\n",
     "\n",
     "It is important to understand that the `signal` we measure in `MRI` **does not** come from a `single proton`. For reference, `18 grams` of `water` contains one [mole](https://fr.wikipedia.org/wiki/Mole_(unit)) of `H2O molecules`, or about $10^{24}$ `hydrogen atoms`... The `signal` that we are measuring comes from the `juxtaposition` of the `spins` of all of these `atoms`. A `radio-frequency wave` which `resonates` with `hydrogen` will not only tilt the `spins`, but also bring them into `phase`. Imagine that you have a thousand `swings`, which you push at the same time (at the right `frequency`). Not only will the `movement` of the `swings` gain in `amplitude`, but all the `swings` will be at the same point in their `trajectory` at the same time. It is the same for `spins` after an `excitement`.\n",
     "```\n",
     "\n",
-    "```{admonition} Why radio?\n",
+    "```{note} Why radio?\n",
     "As we have seen, the `Larmor frequency` of `hydrogen` is `42.58 MHz/Tesla`. In a `3T MRI`, we are therefore going to excite with a `wave` at a `frequency` of approximately `120 MHz`, or `120 million waves` per second (!). This type of `frequency` falls into the domain of [radio waves](https://fr.wikipedia.org/wiki/Onde_radio).\n",
     "```\n",
     "\n",
@@ -173,11 +172,11 @@
     "\n",
     "We still have to cut our section into `pixels`... But that is largely beyond the context of this introductory chapter. To learn more about `spatial encoding` in `MRI`, you can consult this [resource](https://www.imaios.com/en/e-Courses/e-MRI/Signal-spatial-encoding/Spatial-encoding- intro).\n",
     "\n",
-    "```{admonition} Field of View (FOV)\n",
+    "```{note} Field of View (FOV)\n",
     "When we make a `3D image` of the `brain`, we will `slice` the `brain` into a `series` of `slices`. By knowing the `size` of the `cuts` as well as the `number of cuts`, we can deduce the `size` of the `3D cube` that corresponds to the `image`. This `size` is called `field of view`, or `FOV`.\n",
     "```\n",
     "\n",
-    "```{admonition} The MRI: a noisy machine\n",
+    "```{note} The MRI: a noisy machine\n",
     "The `acquisition` of an `image` requires `modifying` the `gradients` quickly. The `rapid current changes` in the `gradient coils`, as well as in the `radio-frequency wave emitting coils`, cause the `coils` to `expand` and `contract` rapidly. These `movements` create `significant noise`. Each `type` of `image` has its own \"music\", which depends on the nature and order of the `excitations` and `gradients`. See excerpts below.\n",
     "```"
    ]
@@ -324,7 +323,7 @@
     "`Longitudinal relaxation` and `contrast` $T_1$. Left image: growth of the `magnetic field` along the $B_0$ `axis`, called $M_{z}$. Note that different `tissue types` exhibit distinct `longitudinal relaxation curves`. Right image: an `image` generated by reading at time $TE$ presents a `contrast` between the different `tissue types`. This figure is generated by python code, click on the `+` to see the code.\n",
     "```\n",
     "\n",
-    "```{admonition} M0\n",
+    "```{note} M0\n",
     ":class: tip\n",
     ":name: M0-tip\n",
     "At `equilibrium`, the contribution of the `magnetic moment` along the $B_0$ `axis` is called $M_0$. This value depends on the `density` of `protons` in the `tissues`, i.e. the `number` of `hydrogen atoms` present in the `tissue`. Thus, from one `voxel` to another, we do not necessarily obtain the same value of $M_0$. It is possible to image this parameter, and we then speak of an image in `proton density`.\n",
@@ -429,17 +428,17 @@
     ":name: \"relax-t2-fig\"\n",
     "`Transverse relaxation` and contrast $T_2$. Left image: `decrease` of the `magnetic field` along the $B_1$ `axis`, called $M_{xy}$. Note that different `tissue types` exhibit `distinct transverse relaxation curves`. Right image: an `image` generated by reading at time $TE$ presents a `contrast` between the `different tissue types`. This `contrast` is essentially reversed with respect to `contrast` $T_1$. This figure is generated by python code, click on the `+` to see the code.\n",
     "```\n",
-    "```{admonition} $TE$\n",
+    "```{note} $TE$\n",
     "When we `acquire` `MRI` `data`, we generally do not measure the entire `relaxation curve`, but simply a `measurement point` at time $TE$. By choosing the $TE$ appropriately, we will obtain very different reading values for the different `tissues`. The time $TE$ will be different for a `contrast` $T_1$ and a `contrast` $T_2$.\n",
     "```\n",
     "\n",
-    "```{admonition} $TR$\n",
+    "```{note} $TR$\n",
     "We call $TR$ the time which separates two series of `excitations`. This value will correspond to the `acquisition time` of a `section` for a `structural MRI`, and the `acquisition time` of a `complete cerebral volume` in `fMRI`. It's a weird convention, but widely used by `MRI physicists`.\n",
     "```\n",
-    "```{admonition} flip angle\n",
+    "```{note} flip angle\n",
     "If we're interested in the end of the `relaxation process`, we don't need to `flip` the `spins` completely in the $B_1$ `direction`, just a certain number of `degrees` from $B_0$. This parameter is called `flip angle`.\n",
     "```\n",
-    "```{admonition} $T_1$ vs $T_2$: find the difference\n",
+    "```{note} $T_1$ vs $T_2$: find the difference\n",
     ":class: tip\n",
     ":name: diff-t1-t2-tip\n",
     "Why bother `contrasting` $T_1$ and $T_2$ when one seems to be the exact opposite of the other? Take a good look at the {numref}`relax-t1-fig` and {numref}`relax-t2-fig` `images`. Are there certain `regions` of the `brain` where `image` $T_2$ is not the exact opposite of image $T_1$?\n",
@@ -480,6 +479,8 @@
     "```\n",
     "\n",
     "## Exercices\n",
+    "\n",
+    "In the following we created a few exercices that aim to recap core aspects of this part of the course and thus should allow you to assess if you understood the main points. \n",
     "\n",
     "```{admonition} Exercice 2.1\n",
     ":class: dropdown\n",
