add bib file & update notebooks accordingly

--- a/lecture/introduction/notebooks/neuroscience/mri_intro.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/mri_intro.ipynb
@@ -168,9 +168,9 @@
     "\n",
     "These variations are much weaker than the `B0 field`, and only represent a fraction of a `Tesla`, but this will allow us to `extract spatial information` in a `resonance process`. Using these `gradients`, it is possible to measure the `magnetic properties` of `tissues` located at a `specific point` in `space`, and therefore to make a `(3D) image`. This process is complex, but the first step is relatively simple to understand: it is the cut selection.\n",
     "\n",
-    "We remember that the `Larmor frequency` of a `particle` depends on the `strength` of the `magnetic field` in which it finds itself. By changing the `strength` of the `magnetic field` in a given `direction` thanks to the `gradient coils`, we are going to modify the `Larmor frequency` of the `hydrogen atoms` at a `specific point` in the `gradient`. The `radio-frequency pulses` will only `excite` the `hydrogen atoms` in the `cut` where the `magnetic field` has the `strength` that corresponds to the `excitation` frequency`. In this way, instead of `receiving signal` from the `whole brain`, we only `receive signal` from the `selected slice`, because only the `hydrogen atoms` in this `slice` will `resonate`.\n",
+    "We remember that the `Larmor frequency` of a `particle` depends on the `strength` of the `magnetic field` in which it finds itself. By changing the `strength` of the `magnetic field` in a given `direction` thanks to the `gradient coils`, we are going to modify the `Larmor frequency` of the `hydrogen atoms` at a `specific point` in the `gradient`. The `radio-frequency pulses` will only `excite` the `hydrogen atoms` in the `cut` where the `magnetic field` has the `strength` that corresponds to the `excitation` `frequency`. In this way, instead of `receiving signal` from the `whole brain`, we only `receive signal` from the `selected slice`, because only the `hydrogen atoms` in this `slice` will `resonate`.\n",
     "\n",
-    "We still have to cut our section into `pixels`... But that is largely beyond the context of this introductory chapter. To learn more about `spatial encoding` in `MRI`, you can consult this [resource](https://www.imaios.com/en/e-Courses/e-MRI/Signal-spatial-encoding/Spatial-encoding- intro).\n",
+    "We still have to cut our section into `pixels`... But that is largely beyond the context of this introductory chapter. To learn more about `spatial encoding` in `MRI`, you can consult this [resource](https://www.imaios.com/en/e-Courses/e-MRI/Signal-spatial-encoding/Spatial-encoding-intro).\n",
     "\n",
     "```{note} Field of View (FOV)\n",
     "When we make a `3D image` of the `brain`, we will `slice` the `brain` into a `series` of `slices`. By knowing the `size` of the `cuts` as well as the `number of cuts`, we can deduce the `size` of the `3D cube` that corresponds to the `image`. This `size` is called `field of view`, or `FOV`.\n",
@@ -458,7 +458,7 @@
     "width: 500px\n",
     "name: irm-console-fig\n",
     "---\n",
-    "Connections between the console and the different parts of an `MRI` system. Figure adapted by [P. Bellec](), 2021, licensed under CC-BY. The original Figure is taken from the article by Gruber et al. (2018) {cite:p}`Gruber2018-pq`, licensed under CC-BY-NC.\n",
+    "Connections between the console and the different parts of an `MRI` system. Figure adapted by [P. Bellec](), 2021, licensed under CC-BY. The original Figure is taken from the article by {cite:p}`gruber_rf_2018`, licensed under CC-BY-NC.\n",
     "```\n",
     "\n",
     "All elements of the `MRI` device can be controlled by the console (see {numref}`irm-console-fig`). We have seen together the key principles of `MRI`, but an actual `image` is `acquired` with a complex series of `excitations` and `measurements`, which is called an _acquisition sequence_. Once the `sequence` has been programmed, we can always modify certain `parameters` of the `sequence`, such as:\n",
@@ -476,6 +476,7 @@
     "\n",
     "```{bibliography}\n",
     ":filter: docname in docnames\n",
+    ":style: plain\n",
     "```\n",
     "\n",
     "## Exercices\n",
