--- a/_sources/introduction/notebooks/neuroscience/fmri_intro.ipynb
+++ b/_sources/introduction/notebooks/neuroscience/fmri_intro.ipynb
@@ -190,6 +190,9 @@
     "\n",
     " The increase in `oxygen extraction` therefore paradoxically leads to a local increase in the `concentration` of **oxyhemoglobin** (`oxygenated blood`) compared to the concentration of **deoxyhemoglobin** (`deoxygenated blood`) locally, which can be detected using `fMRI`. The first `quantitative model` of `neurovascular coupling` (known as the `“balloon model”`) was proposed by {cite:p}`buxton_dynamics_1998`.\n",
     "\n",
+    "Below you'll find a cool video of a talk from Claudine Gautheir that nicely explains `neurovascular coupling` in a precise manner with great graphics!\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/x4FEw61rIxM\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
     "\n",
     "### BOLD signal\n",
     "```{figure} ../../../static/neuroscience/hemoglobine-fig.jpg\n",
@@ -1000,16 +1003,6 @@
   }
  ],
  "metadata": {
-  "jupytext": {
-   "cell_metadata_filter": "-all",
-   "formats": "md:myst",
-   "text_representation": {
-    "extension": ".md",
-    "format_name": "myst",
-    "format_version": 0.13,
-    "jupytext_version": "1.10.3"
-   }
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
